Address code review comments about naming.